5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1671_1101.log
== TEST (2019-04-29 13:02:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )
print("Entrada:", x, "kwh e tipo", y)



-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:13:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )
print("Entrada:", x, "kwh e tipo", y)

if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R" and x > 500):
		z = x*0.65
		print("Valor total: R$", round(Z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:14:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )
print("Entrada:", x, "kwh e tipo", y)

if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R" and x > 500):
		z = x*0.65
		print("Valor total: R$", round(Z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.123564
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:15:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R" and x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:16:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R" and x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.158144
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:18:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:18:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.197568
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:18:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)" )

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:19:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:19:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

print("Entrada:", x, "kwh e tipo", y)
if(x > 0):
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.29073
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:29:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

if(x < 0):
	print("Dados invalidos")
elif(y == "R") and (x <= 500):
	z = x*0.44
	print("Valor total: R$", round(z, 2))
elif(y == "R") and (x > 500):
	z = x*0.65
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x <= 1000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x > 1000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))
elif(y == "I") and (x <= 5000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "I") and ( x > 5000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))


-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:29:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

if(x < 0):
	print("Dados invalidos")
elif(y == "R") and (x <= 500):
	z = x*0.44
	print("Valor total: R$", round(z, 2))
elif(y == "R") and (x > 500):
	z = x*0.65
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x <= 1000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x > 1000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))
elif(y == "I") and (x <= 5000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "I") and ( x > 5000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))


-- EXECUTION TIME:
0.243495
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:30:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

if(x < 0) or not (y == "R") or (y == "I") or (y == "C"):
	print("Dados invalidos")
elif(y == "R") and (x <= 500):
	z = x*0.44
	print("Valor total: R$", round(z, 2))
elif(y == "R") and (x > 500):
	z = x*0.65
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x <= 1000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x > 1000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))
elif(y == "I") and (x <= 5000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "I") and ( x > 5000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))


-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:30:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

if(x < 0) or not (y == "R") or (y == "I") or (y == "C"):
	print("Dados invalidos")
elif(y == "R") and (x <= 500):
	z = x*0.44
	print("Valor total: R$", round(z, 2))
elif(y == "R") and (x > 500):
	z = x*0.65
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x <= 1000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "C") and (x > 1000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))
elif(y == "I") and (x <= 5000):
	z = x*0.55
	print("Valor total: R$", round(z, 2))
elif(y == "I") and ( x > 5000):
	z = x*0.60
	print("Valor total: R$", round(z, 2))


-- EXECUTION TIME:
0.209512
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:26:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo de instalacao: (R/I/C)")

if(x < 0) or not (y != "R") or (y != "I") or (y != "C"):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- OUTPUT:
Dados invalidos
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:29:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")
print("Entradas:", x ,"kWh e", y   
if(x < 0) or not (y != "R") or (y != "I") or (y != "C"):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- ERROR:
File "XXXX", line 7
    if(x < 0) or not (y != "R") or (y != "I") or (y != "C"):
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:29:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e", y   
if(x < 0) or not (y != "R") or (y != "I") or (y != "C"):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- ERROR:
File "XXXX", line 8
    if(x < 0) or not (y != "R") or (y != "I") or (y != "C"):
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:30:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e", y   
if(x < 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- ERROR:
File "XXXX", line 8
    if(x < 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:31:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e", y   
if(x > 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- ERROR:
File "XXXX", line 8
    if(x > 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:31:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x > 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:32:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x < 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		z = x*0.65
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x <= 1000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "C") and (x > 1000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and (x <= 5000):
		z = x*0.55
		print("Valor total: R$", round(z, 2))
	elif(y == "I") and ( x > 5000):
		z = x*0.60
		print("Valor total: R$", round(z, 2))


-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:35:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x < 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		w = x*0.65
		print("Valor total: R$", round(w, 2))
	elif(y == "C") and (x <= 1000):
		f = x*0.55
		print("Valor total: R$", round(f, 2))
	elif(y == "C") and (x > 1000):
		g = x*0.60
		print("Valor total: R$", round(g, 2))
	elif(y == "I") and (x <= 5000):
		t = x*0.55
		print("Valor total: R$", round(t, 2))
	elif(y == "I") and ( x > 5000):
		u = x*0.60
		print("Valor total: R$", round(u, 2))


-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:35:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x < 0):
	print("Dados invalidos")
	if(y == "R") and (x <= 500):
		z = x*0.44
		print("Valor total: R$", round(z, 2))
	elif(y == "R") and (x > 500):
		w = x*0.65
		print("Valor total: R$", round(w, 2))
	elif(y == "C") and (x <= 1000):
		f = x*0.55
		print("Valor total: R$", round(f, 2))
	elif(y == "C") and (x > 1000):
		g = x*0.60
		print("Valor total: R$", round(g, 2))
	elif(y == "I") and (x <= 5000):
		t = x*0.55
		print("Valor total: R$", round(t, 2))
	elif(y == "I") and ( x > 5000):
		u = x*0.60
		print("Valor total: R$", round(u, 2))


-- EXECUTION TIME:
0.148593
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:40:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x > 0):
	if(y == "R") and (x <= 500):
		z = round(x*0.44,2)
		print("Valor total: R$", z)
	elif(y == "R") and (x > 500):
		w = round(x*0.65,2)
		print("Valor total: R$", w)
	elif(y == "C") and (x <= 1000):
		f = round(x*0.55,2)
		print("Valor total: R$", f)
	elif(y == "C") and (x > 1000):
		g = round(x*0.60,2)
		print("Valor total: R$", g)
	elif(y == "I") and (x <= 5000):
		t = round(x*0.55,2)
		print("Valor total: R$", t)
	elif(y == "I") and ( x > 5000):
		u = round(x*0.60,2)
		print("Valor total: R$", u)
else:
	print("Dados invalidos")


-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:40:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("consumo de energia:"))
y = input("tipo: (R/I/C)")

print("Entradas:", x ,"kWh e tipo", y) 
if(x > 0):
	if(y == "R") and (x <= 500):
		z = round(x*0.44,2)
		print("Valor total: R$", z)
	elif(y == "R") and (x > 500):
		w = round(x*0.65,2)
		print("Valor total: R$", w)
	elif(y == "C") and (x <= 1000):
		f = round(x*0.55,2)
		print("Valor total: R$", f)
	elif(y == "C") and (x > 1000):
		g = round(x*0.60,2)
		print("Valor total: R$", g)
	elif(y == "I") and (x <= 5000):
		t = round(x*0.55,2)
		print("Valor total: R$", t)
	elif(y == "I") and ( x > 5000):
		u = round(x*0.60,2)
		print("Valor total: R$", u)
else:
	print("Dados invalidos")


-- EXECUTION TIME:
0.215631
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
